fix ChronicleMap e2e tests