@@ -84,6 +84,17 @@ task integrationTest(type: Test) {
         args += "-DconfluentImagesTag=${project.property("confluentImagesTag")}"
     }
 
+    // https://chronicle.software/chronicle-support-java-17/
+    args +=  ["--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+              "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+              "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+              "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+              "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+              "--add-opens=java.base/java.lang=ALL-UNNAMED",
+              "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+              "--add-opens=java.base/java.io=ALL-UNNAMED",
+              "--add-opens=java.base/java.util=ALL-UNNAMED"]
+
     jvmArgs = args
     minHeapSize "2000m"
     maxHeapSize "3500m"
